syntax = "proto3";

package types;

import "lib/common/base.proto";

option go_package = "github.com/RosettaFlow/Carrier-Go/lib/types";

message ProposalTask {
  /**
  ProposalId common.Hash
	*Task
	CreateAt uint64
   */
  string          proposal_id = 1;
  string          task_id = 2;
  uint64          create_at = 3;
}

message OrgProposalState{
  uint64                        start_at = 1;
  uint64                        deadline_duration = 2;
  uint64                        create_at = 3;
  api.protobuf.TaskRole         task_role = 4;
  api.protobuf.TaskOrganization task_org = 5;
  uint32                        period_num = 6;
  string                        task_id = 7;
  api.protobuf.TaskOrganization task_sender = 8;
}

message PrepareVoteResource{
  string id = 1;
  string ip = 2;
  string port = 3;
  string party_id = 4;
}

message MsgOption{
  string                        proposal_id = 1;
  api.protobuf.TaskRole         sender_role = 2;
  string                        sender_party_id = 3;
  api.protobuf.TaskRole         receiver_role = 4;
  string                        receiver_party_id = 5;
  api.protobuf.TaskOrganization owner = 6;
}

message PrepareVote{
  MsgOption                 msg_option = 1;
  uint32                    vote_option = 2;
  PrepareVoteResource       peer_info = 3;
  uint64                    create_at = 4;
  bytes                     sign = 5;
}

message ConfirmVote{
  MsgOption                 msg_option = 1;
  uint32                    vote_option = 2;
  uint64                    create_at = 3;
  bytes                     sign = 4;
}